Fix to variable editor spacing.
Fixes #156

--- a/client/main/variableeditor.css
+++ b/client/main/variableeditor.css
@@ -127,7 +127,7 @@
 
 .silky-variable-editor-widget {
     position: absolute ;
-    padding: 20px 50px ;
+    padding: 8px 50px ;
     width: 100% ;
     box-sizing: border-box;
 }
